# progettoLSO

./: CMakeLists.txt  DirList.c  DirList.h  FileManager.c  FileManager.h  FileReader.c  FileReader.h  FileWriter.c  FileWriter.h  Key.txt  KeyStruct.h  LICENSE  PlayfairCipher.c  PlayfairCipher.h  PlayfairUtilities.c  PlayfairUtilities.h  StringManager.c  StringManager.h  ascii_lettere_accentate.txt  encodedMessage.pf  fileReader.c  fileReader.h  fileWriter.c  fileWriter.h  initializer.c  initializer.h  key.txt  keyfile.txt  link_utili.txt  main.c  message.txt  playfair.c  playfair.h  prova.txt  prove.txt
DecodedTexts/: Text1.dec  Text10.dec  Text2.dec  Text3.dec  Text4.dec  Text7.dec
EncodedTexts/: Text1.pf  Text10.pf  Text2.pf  Text3.pf  Text4.pf  Text7.pf
Files/: DirectoriesFile.txt
Texts/: Text1.txt  Text10.txt  Text2.txt  Text3.txt  Text4.txt  prova.dec
encode_outputDir/: file10kb.pf  message2.pf  message3.pf  message5.pf
file_grossi/: file10kb.txt
messagesToEncode/: message1.txt  message2.txt  message3.txt
